# xlockmost

./: .gitignore  LICENSE  Makefile.am  autogen.sh  configure.ac
debian/: changelog  control  copyright  rules  xlockmost.1  xlockmost.manpages
src/: Makefile.am  main.c  pam_auth.c  pam_auth.h  utils.c  utils.h
