##
## Copyright (c) 2010 Alexey Smirnov <alexey.smirnov@gmx.com>
##
## See the file LICENSE for information on usage and redistribution
## of this file, and for a DISCLAMER OF ALL WARRANTIES.
##

bin_PROGRAMS = xlockmost
xlockmost_SOURCES = main.c utils.c utils.h pam_auth.c pam_auth.h
xlockmost_LDADD = $(LDADD) $(X11_LIBS) $(PAM_LIBS)
